--- a/config/forcerule.yml
+++ b/config/forcerule.yml
@@ -2864,7 +2864,7 @@ Rule:
 - DOMAIN-SUFFIX,vd.l.qq.com,Domestic
 
 - DOMAIN-SUFFIX,analytics.strava.com,DIRECT
-
+- DOMAIN-SUFFIX,duosecurity.com,DIRECT
 
 - DOMAIN,vd.l.qq.com,DIRECT
 
